fixed height and overlapping issues

--- a/personal-website/src/components/about/About.css
+++ b/personal-website/src/components/about/About.css
@@ -1,54 +1,37 @@
 .AboutPage {
     background: #f5f5f5;
     height: 100vh;
+    min-height: 700px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     border: 1px solid black;
 }
 
 .AboutPage > .about-container {
-    position: relative;
+    background: #fff;
     width: 450px;
     height: 100px;
-    top: 200px;
-}
-
-.AboutPage > .container {
-    position: relative;
-    width: 450px;
-    height: 100px;
-    top: 200px;
-}
-
-.line {
-    position: absolute;
-    width: 45%;
-    height: 2px;
-    background-color: black;
-}
-
-.left {
-    right: 65%;
-}
-
-.right {
-    left: 65%;
-}
-
-.text {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    align-self: center;
     text-align: center;
-    font-size: 38px;
-    font-weight: Bold;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.AboutPage > .about-container > .about-line-left {
+    
 }
 
 .AboutPage > .main-about {
-    background: black;
-    position: relative;
-    height: 100px;
-    width: 450px;
-    top: 50%;
-    right: 15%;
+    background: #fff;
+    width: 500px;
+    height: 500px;
+    margin-top: 40px;
+    align-self: center;
+}
+
+@media screen and (min-width: 1600px) {
+    .AboutPage {
+        min-height: 1000px;
+    }
 }
